Issue #2758: Corrected structure in jquery selector. Added css for aligning field descriptions in new html structure.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.TicketProcess.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.TicketProcess.css
@@ -137,6 +137,10 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
     display: none;
 }
 
+[class*="Row_DynamicField"] .FieldExplanation {
+    margin-left: calc( 30% + 10px );
+}
+
 .FieldHelp {
     display: block;
 }
